nie do końca dobry bootstrap i kroswalidacja

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -275,7 +275,7 @@
        </rect>
       </property>
       <property name="plainText">
-       <string>33</string>
+       <string>80</string>
       </property>
      </widget>
      <widget class="QPushButton" name="CpushButtonExecute">
@@ -327,11 +327,11 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;%&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="QRadioButton" name="radioButton">
+     <widget class="QRadioButton" name="radioButtonNone">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>150</y>
+        <y>160</y>
         <width>82</width>
         <height>17</height>
        </rect>
@@ -339,15 +339,18 @@
       <property name="text">
        <string>None</string>
       </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
       <attribute name="buttonGroup">
        <string notr="true">buttonGroup_2</string>
       </attribute>
      </widget>
-     <widget class="QRadioButton" name="radioButton_2">
+     <widget class="QRadioButton" name="radioButtonBootstrap">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>170</y>
+        <y>180</y>
         <width>82</width>
         <height>17</height>
        </rect>
@@ -359,11 +362,11 @@
        <string notr="true">buttonGroup_2</string>
       </attribute>
      </widget>
-     <widget class="QRadioButton" name="radioButton_3">
+     <widget class="QRadioButton" name="radioButtonCrossvalidation">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>190</y>
+        <y>200</y>
         <width>101</width>
         <height>21</height>
        </rect>
@@ -396,6 +399,19 @@
         <width>101</width>
         <height>31</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ClabelTraningPart_4">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>130</y>
+        <width>131</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Partition method:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </widget>
